[tool.poetry]
name = "he21-atl-material-lager"
version = "0.1.0"
description = ""
authors = ["Jan Zeugin <jan.zeugin@outlook.com>"]
readme = "README.md"
packages = [{include = "he21_atl_material_lager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
sqlalchemy = {extras = ["all"], version = "^2.0.20"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
