[tool.poetry]
name = "he21-atl-material-lager"
version = "0.1.0"
description = ""
authors = ["Jan Zeugin <jan.zeugin@outlook.com>"]
readme = "README.md"
packages = [{include = "he21_atl_material_lager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
sqlalchemy = {extras = ["all"], version = "^2.0.20"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
