[tool.poetry]
name = "he21-atl-material-lager"
version = "0.1.0"
description = ""
authors = ["Jan Zeugin <jan.zeugin@outlook.com>"]
readme = "README.md"
packages = [{include = "he21_atl_material_lager"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
